--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^9.2.1",
     "@nestjs/serve-static": "^3.0.0",
+    "@nestjs/websockets": "^9.2.1",
     "cts-loader": "^4.2.1",
     "hbs": "^4.2.0",
     "lowdb": "^5.0.5",
