--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@nestjs/platform-socket.io": "^9.2.1",
     "@nestjs/serve-static": "^3.0.0",
     "@nestjs/websockets": "^9.2.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "cts-loader": "^4.2.1",
     "hbs": "^4.2.0",
     "lowdb": "^5.0.5",
